# manhattan

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  mock.json
src/: delta.rs  drink.rs  main.rs  oidc.rs  slack.rs
