[package]
name = "manhattan"
version = "1.0.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.11.9", features = ["blocking"] }
serde = "1.0.133"
serde_derive = "1.0.133"
serde_json = "1.0.74"
